removed text wrap issues in cart fixed button overflow on small screens in landscape

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -107,9 +107,9 @@
   .mobile-text{
     font-size: 16px;
   }
-
-  .fixed-image-height-summary{
-    display:none
+  @media(orientation: landscape){
+    .badge-secondary{
+      font-size:1.2rem
+    }
   }
-
 }
